<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".history.view.HistoryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/history_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/request_history" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C8C8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">
            <!--    Filter Section-->

            <HorizontalScrollView
                android:id="@+id/filter_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:fadeScrollbars="true"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarDefaultDelayBeforeFade="0"
                android:scrollbarFadeDuration="1000">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <RadioGroup
                        android:id="@+id/http_type_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:checkedButton="@id/all_request_type"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/all_request_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all" />

                        <RadioButton
                            android:id="@+id/get_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get" />

                        <RadioButton
                            android:id="@+id/post_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post" />


                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/http_status_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkedButton="@id/all_request"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/all_request"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all" />

                        <RadioButton
                            android:id="@+id/success_requests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/success" />

                        <RadioButton
                            android:id="@+id/failed_requests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/failed" />
                    </RadioGroup>
                </LinearLayout>
            </HorizontalScrollView>

            <CheckBox
                android:id="@+id/sort_by_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/sort_by_execution_time"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/request_history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="50"
                tools:listitem="@layout/history_request_item_layout" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/history_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>